navbar.css
.dropdown {
    position: relative;
    display: inline-block;
}

.navbar {
background-color: #1C2331;
margin-bottom: 0;
padding-bottom: 0;
border-radius: 0;
}

.navbar a,
.navbar-brand {
    color: #ffffff;
}

.navbar li a:hover {
    color: #1C2331;
}

.dropdown-content {
    position: absolute;
    right:3%;
    min-width: 100%;
    border: 1px solid black;
    padding: 20px;
    top: 50px;
    background-color: #817287;
    overflow: auto;
    z-index: 1;
}

#loginDropdown {
    display: none;
}

#signupDropdown {
    display: none;
}

.show {
    display: block;
}

